[gd_scene load_steps=2 format=3 uid="uid://cbvf3pelp6d5q"]

[ext_resource type="Script" path="res://mod_loader/editor/dictionary_editor_panel_mono.gd" id="1_5hg5e"]

[node name="DictionaryEditorPanelMono" type="HBoxContainer"]
script = ExtResource("1_5hg5e")

[node name="key" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "default"
expand_to_text_length = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="script" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "脚本"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="script_value" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "default"
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="scene" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "场景"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ":"

[node name="scene_value" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "default"
expand_to_text_length = true

[node name="delete" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "删除"

[connection signal="focus_exited" from="key" to="." method="_on_key_focus_exited"]
[connection signal="text_submitted" from="key" to="." method="_on_key_text_submitted"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/script_value" to="." method="_on_value_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/script_value" to="." method="_on_value_text_submitted"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer2/scene_value" to="." method="_on_value_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer2/scene_value" to="." method="_on_value_text_submitted"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
